<resources>
    <string name="app_name">Attendance</string>
    <string name="app_name1">ATTENDANCE</string>
    <string name="forgot_your_password">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="remember_me">Ghi nhớ đăng nhập</string>
    <string name="wrong_account">Sai tài khoản hoặc mật khẩu</string>
    <string name="username_or_password_not_empty">Bạn cần nhập đủ thông tin.</string>
    <string name="home">Trang chủ</string>
    <string name="timekeeping">Chấm công</string>
    <string name="utilities">Tiện ích</string>
    <string name="you">Bạn</string>
    <string name="calendarA">Lịch</string>
    <string name="news">Tin tức</string>
    <string name="user">Cá nhân</string>
    <string name="function">Chức năng</string>
    <string name="full_name">Họ và tên</string>
    <string name="date_time">dd-mm-yyyy</string>
    <string name="header_post">Header post</string>
    <string name="posistion">Chức vụ</string>
    <string name="post">Bản tin</string>
    <string name="wage">Lương</string>
    <string name="num_leave_early">Số lần về sớm</string>
    <string name="time_start_working">Thời gian bắt đầu làm</string>
    <string name="time_end_working">Thời gian tan làm</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="new_year30">30-12</string>
    <string name="new_year31">31-12</string>
    <string name="new_year29">29-12</string>
    <string name="new_year1">01-01</string>
    <string name="new_year2">02-01</string>
    <string name="new_year3">03-01</string>
    <string name="holiday_king">10-03</string>
    <string name="day_win">30-04</string>
    <string name="day_labor">01-05</string>
    <string name="independence_day">02-09</string>
    <string name="feedback">Phản hồi</string>
    <string name="enter_content_feedback">Nhập nội dung phản hồi (không quá 500 ký tự)*</string>
    <string name="wage_of_month">Lương tháng</string>
    <string name="number_hour_working">Số tiếng làm</string>
    <string name="overtime">Số tiếng làm</string>
    <string name="send_success">Gửi thành công</string>
    <string name="infomation_feedback">Thông tin phản hồi</string>
    <string name="number_of_times_late">Số lần đi muộn</string>
    <string name="coefficient_wage">Hệ số lương</string>
    <string name="coefficient_wage_overtime">Hệ số lương tăng ca</string>
    <string name="some_holidays">Số ngày nghỉ</string>
    <string name="infomation_user">Thông tin cá nhân</string>
    <string name="list_feedback">Danh sách phản hồi</string>
    <string name="detail_work_day">Chi tiết ngày làm việc</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="reply">Phản hồi</string>
    <string name="reply_technique">Phản hồi kỹ thuật</string>
    <string name="logout">Đăng xuất</string>
    <string name="infomation_app">Thông tin ứng dụng</string>
    <string name="edit">Sửa</string>
    <string name="gender">Giới tính</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="birthday">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="star">*</string>
    <string name="part">Bộ phận</string>
    <string name="save">Lưu</string>
    <string name="channel_name_1">Notification news</string>
    <string name="channel_description_1">This is notification news</string>
    <string name="channel_name_2">Notification message</string>
    <string name="channel_description_2">This is notification message</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="VND">VND</string>
    <string name="update">Cập nhật</string>
    <string name="password_old">Mật khẩu cũ</string>
    <string name="password_now">Mật khẩu hiện tại</string>
    <string name="wrong_password_now">Sai mật khẩu hiện tại. Hãy thử lại.</string>
    <string name="wrong_password">Sai mật khẩu. Hãy thử lại.</string>
    <string name="no_empty">Không được để trống</string>
    <string name="system_error">Hệ thống bị lỗi</string>
    <string name="get_data_error">Lỗi lấy dữ liệu</string>
    <string name="delete_success">Xoá thành công</string>
    <string name="delete_false">Xoá không thành công</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tài khoản</string>
    <string name="time">Thời gian</string>
    <string name="rank">Thứ</string>
    <string name="header_calendar">Header</string>
    <string name="body_calendar">Body</string>
    <string name="day">Ngày</string>
    <string name="question_answer">Hỏi &amp; Đáp</string>
    <string name="notification">Thông báo</string>
    <string name="add_post">Tạo bản tin</string>
    <string name="add_calendar">Thêm sự kiện</string>
    <string name="add_user">Thêm nhân viên</string>
    <string name="calendar">Sự kiện</string>
    <string name="enter_header_post">Nhập tiêu đề của bản tin (không quá 100 ký tự)*</string>
    <string name="enter_content">Nhập câu hỏi</string>
    <string name="enter_content_post">Nhập nội dung cho bản tin</string>
    <string name="number_of_working_days">Số ngày đi làm</string>
    <string name="password_confirm">Xác nhận mật khẩu</string>
    <string name="password_incorrect">Mật khẩu không khớp</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="not_exist">Not exist</string>
    <string name="exist">Tài khoản đã tồn tại</string>
    <string name="timesheets">Bảng chấm công</string>
    <string name="calendar_detail">Chi tiết lịch</string>
    <string name="header_calendar_detail">Tên sự kiện:</string>
    <string name="type_calendar">Loại sự kiện:</string>
    <string name="address1">Địa điểm:</string>
    <string name="day1">Ngày:</string>
    <string name="time_start">Thời gian bắt đầu:</string>
    <string name="time_end">Thời gian kết thúc:</string>
    <string name="body_calender">Nội dung:</string>
    <string name="search">Tìm kiếm</string>
    <string name="manager_user">Quản lý nhân viên</string>
    <string name="manager_time_keeping">Quản lý chấm công</string>
    <string name="monday">Thứ hai</string>
    <string name="tuesday">Thứ ba</string>
    <string name="wednesday">Thứ tư</string>
    <string name="thursday">Thứ năm</string>
    <string name="friday">Thứ sáu</string>
    <string name="saturday">Thứ bảy</string>
    <string name="sunday">Chủ nhật</string>
    <string name="not_exist_account">Tài khoản không tồn tại.</string>
    <string name="warning">Mật khẩu của bạn phải có ít nhất 6 ký tự, bao gồm cả chữ số, chữ cái và ký tự đặc biệt (!$@%).</string>
    <string name="warning_password_new">Hãy chọn mật khẩu an toàn hơn mà bạn chưa dùng ở bất kỳ nơi nào khác. Mật khẩu này nên có hơn 6 ký tự và khó đoán đối với người khác.</string>
    <string name="update_false">Cập nhật không thành công</string>
    <string name="warning_password_confirm">Mật khẩu mới không khớp. Hãy nhập lại mật khẩu mới tại đây.</string>
    <string name="part1">Chào mừng bạn đến với ứng dụng Công Ty Samsung!</string>
    <string name="part2">Chúng tôi tự hào giới thiệu đến bạn một ứng dụng mạnh mẽ và tiện lợi, được tạo ra đặc biệt để cung cấp cho bạn những công cụ tốt nhất để quản lý và tối ưu hóa nguồn nhân lực của bạn. Với ứng dụng này, việc quản lý và tương tác với nhân viên chưa bao giờ dễ dàng và hiệu quả như vậy.</string>
    <string name="part3">Ứng dụng Công Ty Samsung không chỉ giúp bạn thông báo các thông tin quan trọng một cách nhanh chóng và dễ dàng đến toàn bộ đội ngũ nhân viên mà còn cho phép bạn:</string>
    <string name="part4">Chấm công dễ dàng: Theo dõi thời gian làm việc của nhân viên, nghỉ phép và làm việc từ xa một cách chính xác và hiệu quả.</string>
    <string name="part5">Tương tác và phản hồi: Tạo môi trường làm việc tích cực thông qua khả năng gửi ý kiến, đề xuất và phản hồi trực tiếp.</string>
    <string name="part6">Chỉnh sửa thông tin nhân viên: Quản lý và cập nhật thông tin nhân viên một cách dễ dàng để đảm bảo dữ liệu luôn được cập nhật và chính xác.</string>
    <string name="part7">Xem lịch làm việc: Cho phép nhân viên xem lịch làm việc của họ dễ dàng để lập kế hoạch và sắp xếp công việc một cách thuận tiện.</string>
    <string name="part8">Ứng dụng Công Ty Samsung đã được phát triển với mục tiêu giúp bạn quản lý công ty của mình một cách thông minh và hiệu quả hơn. Hãy sử dụng ứng dụng này để cải thiện quản lý nhân sự và tạo một môi trường làm việc thú vị và phát triển.</string>
    <string name="part9">Cùng trải nghiệm sự tiện lợi và sức mạnh của ứng dụng Công Ty SamSung ngay hôm nay!</string>
    <string name="example_news">Chương trình CĐS quốc gia hướng tới mục tiêu kép là vừa phát triển chính phủ số, kinh tế số, xã hội số, vừa hình thành các doanh nghiệp công nghệ số Việt Nam có năng lực vươn ra toàn cầu, với một số chỉ số cơ bản cụ thể.
        Chương trình xác định tầm nhìn đến năm 2030, Việt Nam trở thành quốc gia số, ổn định và thịnh vượng, tiên phong thử nghiệm các công nghệ và mô hình mới; đổi mới căn bản, toàn diện hoạt động quản lý, điều hành của Chính phủ, hoạt động sản xuất kinh doanh của doanh nghiệp, phương thức sống, làm việc của người dân, phát triển môi trường số an toàn, nhân văn, rộng khắp.
        Theo đó, ở cấp độ toàn quốc, CĐS là chuyển đổi chính phủ số, kinh tế số và xã hội số quốc gia. Ở cấp độ địa phương, CĐS là chuyển đổi sang chính quyền số, kinh tế số và xã hội số trên địa bàn của địa phương đó. Địa phương CĐS thành công sẽ đóng góp vào thành công chung của chuyển đổi số quốc gia. Do vậy, CĐS là nhiệm vụ cần có sự vào cuộc quyết tâm của toàn hệ thống chính trị, triển khai xuyên suốt, đồng bộ từ cấp T.Ư đến địa phương.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>