<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    tools:context=".activities.FeedBackActivity">

    <ScrollView
        android:id="@+id/sc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/background_cus">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:foreground="@drawable/animation_click"
                    android:src="@drawable/icon_back_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_type_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_header"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/infomation_feedback"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_content_feedback"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/txt_title_feedback"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/botron_edittext"
                android:gravity="left"
                android:hint="@string/enter_content_feedback"
                android:maxLength="500"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_count_number_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_content_feedback"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="0/500"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:foreground="@drawable/animation_click"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_cus_dark_shadow"
        android:text="@string/feedback"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pb_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:theme="@style/white"
        android:visibility="gone" />

</RelativeLayout>